test/core/errors/packages_error/zs/upper_case_letter_in_Package_name_error.zs
package upper_case_letter_in_Package_name_error;

